removed device auth
