# BankApi.Core/Implementation/Model.DeviceAuth.cs
@@ -1,9 +1,0 @@
-﻿public class DeviceAuthorization
-{
-    public int Id { get; set; }
-    public string DeviceCode { get; set; } = default!;
-    public string UserCode { get; set; } = default!;
-    public string? Username { get; set; }
-    public bool IsApproved { get; set; }
-    public DateTime ExpiresAt { get; set; }
-}
